# py-agent-ctrl

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.beads/: .beads-credential-key  metadata.json
.github/workflows/: ci.yml
agent_ctrl/: __init__.py  client.py  events.py
apps/cli/: main.py
docs/dev/: architecture.md
docs/user/: cli.md  migration.md  quickstart.md
libs/py_agent_ctrl/: __init__.py  cli.py
libs/py_agent_ctrl/actions/: __init__.py  agents.py  base.py  execute.py  permissions.py  sessions.py  stream.py
libs/py_agent_ctrl/adapters/: acp.py
libs/py_agent_ctrl/api/: __init__.py  contracts.py  events.py  facade.py  models.py
libs/py_agent_ctrl/services/bridges/claude_code/: __init__.py  bridge.py  command_builder.py  models.py  parser.py
libs/py_agent_ctrl/services/bridges/codex/: __init__.py  bridge.py  command_builder.py  parser.py
libs/py_agent_ctrl/services/bridges/gemini/: __init__.py  bridge.py  command_builder.py  parser.py
libs/py_agent_ctrl/services/bridges/opencode/: __init__.py  bridge.py  command_builder.py  parser.py
libs/py_agent_ctrl/services/bridges/pi/: __init__.py  bridge.py  command_builder.py  parser.py
libs/py_agent_ctrl/services/core/: binaries.py  env.py  errors.py  subprocess.py
research/: nanoclaw.md  plan.md
research/alternatives/: README.md  agent-client-protocol.md  claude-agent-sdk-python.md  follow-on-plan.md  hapi.md  missed-problems.md  myclaude-codeagent-wrapper.md
resources/skills/upgrade/: SKILL.md
tests/: test_client.py
tests/feature/: helpers.py  test_claude_bridge.py  test_codex_bridge.py  test_ctrlagent_cli.py  test_gemini_bridge.py  test_opencode_bridge.py  test_pi_bridge.py  test_streaming.py
tests/integration/: live_helpers.py  test_claude_bridge.py  test_codex_bridge.py  test_gemini_bridge.py  test_opencode_bridge.py  test_pi_bridge.py
tests/regression/: test_parsing_regressions.py
tests/unit/: test_acp_adapter.py  test_action_callbacks.py  test_builder_chains.py  test_claude_bridge.py  test_claude_command_options.py  test_command_builder_sessions.py  test_facade.py  test_other_bridges.py  test_permissions.py  test_stream_result.py  test_subprocess.py  test_utils.py
