[project]
name = "py-agent-ctrl"
version = "0.1.0"
description = "Programmatic wrapper for Claude Code CLI — fluent builder, typed stream-json events, session management."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=9.0",
    "pytest-asyncio>=1.3",
    "ruff>=0.15",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agent_ctrl"]
