[project]
name = "py-agent-ctrl"
version = "0.1.0"
description = "Unified Python bridge for CLI coding agents with a shared facade and ctrlagent CLI."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "pydantic>=2.11",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0",
    "pytest-asyncio>=1.3",
    "ruff>=0.15",
    "mypy>=1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
ctrlagent = "py_agent_ctrl.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["libs/py_agent_ctrl"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["libs/py_agent_ctrl"]
