[project]
name = "py-agent-ctrl"
version = "0.1.0"
description = "Unified Python bridge for CLI coding agents with a shared facade and ctrlagent CLI."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
    {name = "Dariusz Debowczyk", email = "ddebowczyk@gmail.com"},
]
keywords = ["agent", "cli", "llm", "claude", "codex", "gemini", "opencode", "coding-agent"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pydantic>=2.11",
]

[project.urls]
Homepage = "https://github.com/cognesy/py-agent-ctrl"
Repository = "https://github.com/cognesy/py-agent-ctrl"
Changelog = "https://github.com/cognesy/py-agent-ctrl/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest>=9.0",
    "ruff>=0.15",
    "mypy>=1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
ctrlagent = "py_agent_ctrl.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["libs/py_agent_ctrl"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["libs/py_agent_ctrl"]
